<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:layout_columnSpan="3"
    android:gravity="center">
<!--android:orientation="horizontal"-->
    <TableRow
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:gravity="center">
        <Button
            android:id="@+id/calc_btn_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1"
            android:textSize="@dimen/button_text" />
        <Button
            android:id="@+id/calc_btn_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_2"
            android:textSize="@dimen/button_text" />
        <Button
            android:id="@+id/calc_btn_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_3"
            android:textSize="@dimen/button_text" />
    </TableRow>
    <TableRow
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:gravity="center">
        <Button
            android:id="@+id/calc_btn_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_4"
            android:textSize="@dimen/button_text" />
        <Button
            android:id="@+id/calc_btn_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_5"
            android:textSize="@dimen/button_text" />
        <Button
            android:id="@+id/calc_btn_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_6"
            android:textSize="@dimen/button_text" />
    </TableRow>
    <TableRow
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">
        <Button
            android:id="@+id/calc_btn_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_7"
            android:textSize="@dimen/button_text" />
        <Button
            android:id="@+id/calc_btn_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_8"
            android:textSize="@dimen/button_text" />
        <Button
            android:id="@+id/calc_btn_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_9"
            android:textSize="@dimen/button_text" />
    </TableRow>
    <TableRow
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:gravity="center">
        <Button
            android:id="@+id/calc_btn_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:text="@string/_0"
            android:textSize="@dimen/button_text" />
        <Button
            android:id="@+id/calc_btn_point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_point"
            android:textSize="@dimen/button_text" />
    </TableRow>
</TableLayout>

