<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/calculator_layout_id">

    <TextView
        android:id="@+id/calc_workTextView"
        android:layout_width="@dimen/size_work_text_view"
        android:layout_height="40dp"
        android:text="@string/textWorkView"
        android:gravity="end"
        android:textSize="@dimen/sizeTextWorkView"
        app:layout_constraintBottom_toTopOf="@+id/calc_btn_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/calc_btn_1"
        android:layout_width="@dimen/size_num_buttons"
        android:layout_height="wrap_content"
        android:text="@string/_1"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toTopOf="@+id/calc_btn_4"
        app:layout_constraintEnd_toStartOf="@+id/calc_btn_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintVertical_chainStyle="packed" />
    <Button
        android:id="@+id/calc_btn_2"
        android:layout_width="@dimen/size_num_buttons"
        android:layout_height="wrap_content"
        android:text="@string/_2"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toTopOf="@+id/calc_btn_5"
        app:layout_constraintEnd_toStartOf="@+id/calc_btn_3"
        app:layout_constraintStart_toEndOf="@+id/calc_btn_1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintVertical_chainStyle="packed" />
    <Button
        android:id="@+id/calc_btn_3"
        android:layout_width="@dimen/size_num_buttons"
        android:layout_height="wrap_content"
        android:text="@string/_3"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toTopOf="@id/calc_btn_6"
        app:layout_constraintEnd_toStartOf="@id/btn_delete"
        app:layout_constraintStart_toEndOf="@+id/calc_btn_2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/btn_delete"
        android:layout_width="@dimen/size_num_buttons"
        android:layout_height="wrap_content"
        android:text="@string/_del"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toTopOf="@id/btn_plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/calc_btn_3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/calc_btn_4"
        android:layout_width="@dimen/size_num_buttons"
        android:layout_height="wrap_content"
        android:text="@string/_4"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toTopOf="@id/calc_btn_7"
        app:layout_constraintEnd_toStartOf="@+id/calc_btn_5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calc_btn_1"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintVertical_chainStyle="packed" />
    <Button
        android:id="@+id/calc_btn_5"
        android:layout_width="@dimen/size_num_buttons"
        android:layout_height="wrap_content"
        android:text="@string/_5"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toTopOf="@id/calc_btn_8"
        app:layout_constraintEnd_toStartOf="@id/calc_btn_6"
        app:layout_constraintStart_toEndOf="@id/calc_btn_4"
        app:layout_constraintTop_toBottomOf="@id/calc_btn_2"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintVertical_chainStyle="packed" />
    <Button
        android:id="@+id/calc_btn_6"
        android:layout_width="@dimen/size_num_buttons"
        android:layout_height="wrap_content"
        android:text="@string/_6"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toTopOf="@id/calc_btn_9"
        app:layout_constraintEnd_toStartOf="@id/btn_plus"
        app:layout_constraintStart_toEndOf="@+id/calc_btn_5"
        app:layout_constraintTop_toBottomOf="@id/calc_btn_3"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/btn_plus"
        android:layout_width="@dimen/size_num_buttons"
        android:layout_height="wrap_content"
        android:text="@string/_plus"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toTopOf="@id/btn_minus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/calc_btn_6"
        app:layout_constraintTop_toBottomOf="@id/btn_delete"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/calc_btn_7"
        android:layout_width="@dimen/size_num_buttons"
        android:layout_height="wrap_content"
        android:text="@string/_7"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toTopOf="@id/calc_btn_0"
        app:layout_constraintEnd_toStartOf="@+id/calc_btn_8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calc_btn_4"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintVertical_chainStyle="packed" />
    <Button
        android:id="@+id/calc_btn_8"
        android:layout_width="@dimen/size_num_buttons"
        android:layout_height="wrap_content"
        android:text="@string/_8"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toTopOf="@id/calc_btn_point"
        app:layout_constraintEnd_toStartOf="@+id/calc_btn_9"
        app:layout_constraintStart_toEndOf="@id/calc_btn_7"
        app:layout_constraintTop_toBottomOf="@+id/calc_btn_5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintVertical_chainStyle="packed" />
    <Button
        android:id="@+id/calc_btn_9"
        android:layout_width="@dimen/size_num_buttons"
        android:layout_height="wrap_content"
        android:text="@string/_9"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toTopOf="@id/button_equals"
        app:layout_constraintEnd_toStartOf="@id/btn_minus"
        app:layout_constraintStart_toEndOf="@+id/calc_btn_8"
        app:layout_constraintTop_toBottomOf="@id/calc_btn_6"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/btn_minus"
        android:layout_width="@dimen/size_num_buttons"
        android:layout_height="wrap_content"
        android:text="@string/_minus"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toTopOf="@id/button_empty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/calc_btn_9"
        app:layout_constraintTop_toBottomOf="@id/btn_plus"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/calc_btn_0"
        android:layout_width="@dimen/size_num_buttons"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/calc_btn_point"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calc_btn_7"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintVertical_chainStyle="packed" />
    <Button
        android:id="@+id/calc_btn_point"
        android:layout_width="@dimen/size_num_buttons"
        android:layout_height="wrap_content"
        android:text="@string/_point"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_equals"
        app:layout_constraintStart_toEndOf="@+id/calc_btn_0"
        app:layout_constraintTop_toBottomOf="@+id/calc_btn_8"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintVertical_chainStyle="packed" />
    <Button
        android:id="@+id/button_equals"
        android:layout_width="@dimen/size_num_buttons"
        android:layout_height="wrap_content"
        android:text="@string/_equals"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/calc_btn_point"
        app:layout_constraintTop_toBottomOf="@+id/calc_btn_9"
        app:layout_constraintEnd_toStartOf="@id/button_empty"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button_empty"
        android:layout_width="@dimen/size_num_buttons"
        android:layout_height="wrap_content"
        android:textSize="@dimen/button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_equals"
        app:layout_constraintTop_toBottomOf="@+id/btn_minus"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineOfTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>